Fixing build failure while running on jdk10.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost/test-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
