--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.1.RELEASE</version>
+		<version>2.0.5.RELEASE</version>
 		<relativePath />
 		<!-- lookup parent from repository -->
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>10</java.version>
-		<scala.version>2.12.6</scala.version>
-		<maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
+		<java.version>11</java.version>
+		<scala.version>2.12.7</scala.version>
+		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -81,6 +81,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+           <groupId>org.javassist</groupId>
+           <artifactId>javassist</artifactId>
+           <version>3.23.1-GA</version>
+        </dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.8.0</version>
@@ -101,7 +106,7 @@
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
-					<version>3.3.2</version>
+					<version>3.4.2</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -130,6 +135,24 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<!-- LOOK OUT: YOU SHOULD USE 3.8.0! -->
+				<version>3.8.0</version>
+				<configuration>
+					<release>${java.version}</release>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<!-- update compiler plugin dependency on
+								ASM for Java 11 compatibility -->
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>6.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
